...

          {/* Inputs */}
          <View className="mb-6 mt-8 w-full items-center">
            <View className="w-full gap-y-7 px-8">
              <TextInput
                className="h-12 w-full rounded-2xl bg-neutralLight/40 px-4 text-base text-neutralLight"
                placeholder="E-mail"
                placeholderTextColor="#fbfbfb"
                autoCapitalize="none"
                value={email}
                onChangeText={setEmail}
              />

              <TextInput
                className="mb-6 h-12 w-full rounded-2xl bg-neutralLight/40 px-4 text-base text-neutralLight"
                placeholder="Palavra-Passe"
                placeholderTextColor="#fbfbfb"
                secureTextEntry
                value={password}
                onChangeText={setPassword}
              />
            </View>
...
